--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <header class="header">
     <div class="container">
-        <a class="logo" href="#">
+        <a class="logo" href="#/current-location">
             <img src="./assets/images/logo.png" width="364" height="58" alt="logo">
         </a> 
         <div class="search-view" data-search-view>
