--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <h2 class="heading">404</h2>
     <p class="body-1">Page not found!</p>
     <a href="#/weather?lat=51.5073219&lon=-0.1276474" class="primary-btn">
-        <span class="span">Go Home</span>
+        <span class="span op">Go Home</span>
     </a>
 </section>
 
